--- a/WorldCities/ClientApp/src/app/countries/countries.component.html
+++ b/WorldCities/ClientApp/src/app/countries/countries.component.html
@@ -1,18 +1,18 @@
 
-<h1>Cities</h1>
+<h1>Countries</h1>
 
-<p>Here's a list of cities</p>
+<p>Here's a list of countries</p>
 
-<p *ngIf="!cities"><em>Loading...</em></p>
+<p *ngIf="!countries"><em>Loading...</em></p>
 
-<mat-form-field [hidden]="!cities">
+<mat-form-field [hidden]="!countries">
   <input matInput (keyup)="loadData($event.target.value)"
-         placeholder="Filter by name (or part of it)..."/>
+         placeholder="Filter by name (or part of it)..." />
 </mat-form-field>
 
-<table mat-table [dataSource]="cities"
+<table mat-table [dataSource]="countries"
        class='table-striped mat-elevation-z8'
-       [hidden]="!cities"
+       [hidden]="!countries"
        matSort (matSortChange)="loadData()"
        matSortActive="{{defaultSortColumn}}"
        matSortDirection="{{defaultSortOrder}}">
@@ -20,34 +20,34 @@
   <!-- Id Column -->
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-    <td mat-cell *matCellDef="let city">{{city.id}}</td>
+    <td mat-cell *matCellDef="let country">{{country.id}}</td>
   </ng-container>
 
   <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-    <td mat-cell *matCellDef="let city">{{city.name}}</td>
+    <td mat-cell *matCellDef="let country">{{country.name}}</td>
   </ng-container>
 
   <!-- Lat Column -->
   <ng-container matColumnDef="lat">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Latitude</th>
-    <td mat-cell *matCellDef="let city">{{city.lat}}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>ISO 2</th>
+    <td mat-cell *matCellDef="let country">{{country.iso2}}</td>
   </ng-container>
 
   <!-- Lon Collumn -->
   <ng-container matColumnDef="lon">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header>Longitude</th>
-    <td mat-cell *matCellDef="let city">{{city.lon}}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>ISO 3</th>
+    <td mat-cell *matCellDef="let country">{{country.iso3}}</td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
+
 </table>
 
 <!-- Pagination directive -->
-<mat-paginator [hidden]="!cities"
+<mat-paginator [hidden]="!countries"
                (page)="getData($event)"
                [pageSize]="10"
                [pageSizeOptions]="[10, 20, 50]"
