--- a/WorldCities/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/WorldCities/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -30,6 +30,11 @@
               [routerLinkActiveOptions]="{ exact: true }">
             <a class="nav-link text-dark" [routerLink]="['/cities']">Cities</a>
           </li>
+          <li class="nav-item"
+              [routerLinkActive]="['link-active']"
+              [routerLinkActiveOptions]="{ exact: true }">
+            <a class="nav-link text-dark" [routerLink]="['/countries']">Countries</a>
+          </li>
         </ul>
       </div>
     </div>
