--- a/WorldCities/ClientApp/src/app/countries/countries.component.html
+++ b/WorldCities/ClientApp/src/app/countries/countries.component.html
@@ -30,13 +30,13 @@
   </ng-container>
 
   <!-- Lat Column -->
-  <ng-container matColumnDef="lat">
+  <ng-container matColumnDef="iso2">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>ISO 2</th>
     <td mat-cell *matCellDef="let country">{{country.iso2}}</td>
   </ng-container>
 
   <!-- Lon Collumn -->
-  <ng-container matColumnDef="lon">
+  <ng-container matColumnDef="iso3">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>ISO 3</th>
     <td mat-cell *matCellDef="let country">{{country.iso3}}</td>
   </ng-container>
