Consolidated form validation into base component
Error messages fail to appear unless country name or city name contains error.

--- a/WorldCities/ClientApp/src/app/cities/city-edit/city-edit.component.html
+++ b/WorldCities/ClientApp/src/app/cities/city-edit/city-edit.component.html
@@ -21,8 +21,7 @@
              placeholder="City name..."
              class="form-control" />
 
-      <div *ngIf="form.get('name').invalid &&
-           (form.get('name').dirty || form.get('name').touched)"
+      <div *ngIf="hasError('name')"
            class="invalid-feedback">
         <div *ngIf="form.get('name').errors?.required">
           Name is required.
@@ -38,8 +37,7 @@
              placeholder="Latitude..."
              class="form-control" />
 
-      <div *ngIf="form.get('lat').invalid &&
-           (form.get('lat').dirty || form.get('lat').touched)"
+      <div *ngIf="hasError('name')"
            class="invalid-feedback">
         <div *ngIf="form.get('lat').errors?.required">
           Latitude is required.
@@ -55,8 +53,7 @@
              placeholder="Latitude..."
              class="form-control" />
 
-      <div *ngIf="form.get('lon').invalid &&
-           (form.get('lon').dirty || form.get('lon').touched)"
+      <div *ngIf="hasError('name')"
            class="invalid-feedback">
         <div *ngIf="form.get('lon').errors?.required">
           Longitude is required.
@@ -77,8 +74,7 @@
         </mat-select>
       </mat-form-field>
 
-      <div *ngIf="form.get('countryId').invalid &&
-           (form.get('countryId').dirty || form.get('countryId').touched)"
+      <div *ngIf="hasError('name')"
            class="invalid-feedback">
         <div *ngIf="form.get('countryId').errors?.required">
           Please select a Country.
