City data now includes country

--- a/WorldCities/ClientApp/src/app/cities/city-edit/city-edit.component.html
+++ b/WorldCities/ClientApp/src/app/cities/city-edit/city-edit.component.html
@@ -37,10 +37,14 @@
              placeholder="Latitude..."
              class="form-control" />
 
-      <div *ngIf="hasError('name')"
+      <div *ngIf="hasError('lat')"
            class="invalid-feedback">
         <div *ngIf="form.get('lat').errors?.required">
           Latitude is required.
+        </div>
+        <div *ngIf="form.get('lat').errors?.pattern">
+          Latitude requires a positive or negative number with 0-4
+            decimal values.
         </div>
       </div>
     </div>
@@ -53,10 +57,14 @@
              placeholder="Latitude..."
              class="form-control" />
 
-      <div *ngIf="hasError('name')"
+      <div *ngIf="hasError('lon')"
            class="invalid-feedback">
         <div *ngIf="form.get('lon').errors?.required">
           Longitude is required.
+        </div>
+        <div *ngIf="form.get('lon').errors?.pattern">
+          Longitude requires a positive or negative number with 0-4
+          decimal values.
         </div>
       </div>
     </div>
