--- a/WorldCities/ClientApp/src/app/countries/countries.component.html
+++ b/WorldCities/ClientApp/src/app/countries/countries.component.html
@@ -54,6 +54,14 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
+  <!-- TotCities Column -->
+  <ng-container matColumnDef="totCities">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      Tot. Cities
+    </th>
+    <td mat-cell *matCellDef="let country"> {{ country.totCities }}</td>
+  </ng-container>
+
 </table>
 
 <!-- Pagination directive -->
